@@ -188,9 +188,13 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 	char			*ip, zone[MAX_STRING_LEN], buffer[MAX_STRING_LEN], *zone_str, *param;
 	struct in_addr		inaddr;
 #ifndef _WINDOWS
+#if __RES>=19991006
+	struct __res_state	res_state;
+#else	/* thread-unsafe resolver API */
 	int			saved_nscount = 0, saved_retrans, saved_retry;
 	unsigned long		saved_options;
 	struct sockaddr_in	saved_ns;
+#endif
 #endif
 	typedef struct
 	{
@@ -465,13 +469,22 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		pDnsRecord = pDnsRecord->pNext;
 	}
 #else	/* not _WINDOWS */
+#if __RES>=19991006
+	memset(&res_state, 0, sizeof(res_state));
+	if (-1 == res_ninit(&res_state))	/* initialize always, settings might have changed */
+#else
 	if (-1 == res_init())	/* initialize always, settings might have changed */
+#endif
 	{
 		SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot initialize DNS subsystem: %s", zbx_strerror(errno)));
 		return SYSINFO_RET_FAIL;
 	}
 
+#if __RES>=19991006
+	if (-1 == (res = res_nmkquery(&res_state, QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
+#else
 	if (-1 == (res = res_mkquery(QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
+#endif
 	{
 		SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot create DNS query: %s", zbx_strerror(errno)));
 		return SYSINFO_RET_FAIL;
@@ -485,6 +498,12 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 			return SYSINFO_RET_FAIL;
 		}
 
+#if __RES>=19991006
+		res_state.nsaddr_list[0].sin_addr = inaddr;
+		res_state.nsaddr_list[0].sin_family = AF_INET;
+		res_state.nsaddr_list[0].sin_port = htons(ZBX_DEFAULT_DNS_PORT);
+		res_state.nscount = 1;
+#else	/* thread-unsafe resolver API */
 		memcpy(&saved_ns, &(_res.nsaddr_list[0]), sizeof(struct sockaddr_in));
 		saved_nscount = _res.nscount;
 
@@ -492,8 +511,23 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		_res.nsaddr_list[0].sin_family = AF_INET;
 		_res.nsaddr_list[0].sin_port = htons(ZBX_DEFAULT_DNS_PORT);
 		_res.nscount = 1;
+#endif
 	}
 
+#if __RES>=19991006
+	if (0 != use_tcp)
+		res_state.options |= RES_USEVC;
+
+	res_state.retrans = retrans;
+	res_state.retry = retry;
+
+	res = res_nsend(&res_state, buf, res, answer.buffer, sizeof(answer.buffer));
+#	if __RES>=20090302
+	res_ndestroy(&res_state);
+#	else
+	res_nclose(&res_state);
+#	endif
+#else	/* thread-unsafe resolver API */
 	saved_options = _res.options;
 	saved_retrans = _res.retrans;
 	saved_retry = _res.retry;
@@ -516,6 +550,7 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		_res.nscount = saved_nscount;
 	}
 
+#endif
 	hp = (HEADER *)answer.buffer;
 
 	if (1 == short_answer)
